# AI-Support-Automation-System

./: .env.example  .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  pyrightconfig.json
app/: db.py  logging_config.py  main.py  scenario_database.py  scenario_world.py  scenarios.py
app/agent/: main.py
app/agents/: context.py  main_agent.py  main_agent_invocation.py
app/api/: __init__.py  providers.py
app/enums/: __init__.py  affected_service.py  agent_run_human_review_result.py  agent_run_outcome.py  draft_review_status.py  message_source.py  ticket_status.py  ticket_supportability.py  utils.py  webhook_delivery_status.py
app/models/: __init__.py  agent_run.py  api_usage_log.py  customer.py  deployment.py  draft_review.py  incident.py  invoice.py  message.py  subscription.py  support_team_member.py  ticket_event.py  ticket_history.py  webhook_delivery_log.py  webhook_endpoint.py
app/observability/: __init__.py  langfuse.py
app/repositories/: __init__.py  serialization.py  (+9 more)
migrations/: env.py
scenarios/: world_1.json  world_2.json
stubs/: world_1.json
tests/: test_agent_context.py  test_agent_repository.py  test_agent_tools.py  test_billing_agent_main.py  test_business_metrics_api.py  test_conversations_api.py  test_draft_review_service.py  test_langfuse_masking.py  test_langfuse_metadata.py  test_langfuse_remote_experiment.py  test_main_agent_experiment.py  test_main_agent_invocation.py  test_scenario_database.py  test_ticket_conversation_service.py  test_webhook_agent.py  test_webhook_delivery_logs_agent_experiment.py  test_world_schema.py
(+47 files in other folders)
