[project]
name = "ai-support-automation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "ipython>=9.14.0",
    "langchain[openai]>=1.3.1",
    "langfuse>=4.7.1",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "sqlalchemy>=2.0.50",
]
